--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.6",
+    "@edgestore/react": "^0.3.3",
+    "@edgestore/server": "^0.3.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -21,15 +23,19 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.22.0",
+    "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-textarea-autosize": "^8.5.9",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "usehooks-ts": "^3.1.1",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
